'discount attacted to the order'

--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -5,6 +5,7 @@
     android:id="@+id/item_row"
     android:layout_width="match_parent"
     android:layout_height="55dp"
+    android:background="@drawable/ripple_effect"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="0dp">
 
