--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SalesApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.SalesApp" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">#0B0F57</item>
+        <item name="color">@color/white</item>
+
     </style>
+
+    <style name="Theme.SalesApp" parent="Base.Theme.SalesApp" />
 </resources>
