--- a/app/src/main/res/drawable/button_bg_selected.xml
+++ b/app/src/main/res/drawable/button_bg_selected.xml
@@ -2,9 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/salesBlue"/>
+    <solid android:color="@color/white"/>
     <corners
         android:radius="3dp"/>
+    <stroke
+        android:color="@color/salesBlue"
+        android:width="2.2dp">
+
+    </stroke>
     <size
         android:width="100dp"
         android:height="100dp"/>
