--- a/app/src/main/res/drawable/gray_border_round_white_square.xml
+++ b/app/src/main/res/drawable/gray_border_round_white_square.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item xmlns:android="http://schemas.android.com/apk/res/android">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="#3B9A2B" />
             <corners android:radius="8dp" />
         </shape>
     </item>
-    <item android:drawable="@drawable/white_round_squre" />
-</layer-list>
