--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -13,11 +13,22 @@
         android:src="@drawable/baseline_arrow_back_24"
         android:background="@null"
         android:visibility="gone"/>
+    <ImageButton
+        android:id="@+id/cartBackArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:padding="10dp"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:background="@null"
+        android:visibility="gone"/>
     <LinearLayout
         android:id="@+id/viewCartBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:gravity="center"
+        android:background="@drawable/ripple_effect"
         >
         <TextView
             android:id="@+id/action_bar_title"
@@ -57,6 +68,7 @@
         android:layout_marginRight="10dp"
         android:background="@null"
         android:visibility="gone"/>
+
     <ImageButton
         android:id="@+id/action_bar_add_user"
         android:layout_width="wrap_content"
@@ -64,5 +76,13 @@
         android:src="@drawable/baseline_person_add_alt_24"
         android:layout_gravity="end"
         android:layout_marginRight="10dp"
-        android:background="@null" />
+        android:background="@drawable/ripple_effect" />
+    <ImageButton
+        android:id="@+id/discountBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/baseline_discount_24"
+        android:background="@drawable/ripple_effect"/>
 </androidx.appcompat.widget.Toolbar>
