--- a/app/src/main/res/layout/fragment_charge.xml
+++ b/app/src/main/res/layout/fragment_charge.xml
@@ -39,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1,016.00"
+                    android:textColor="@color/black"
                     android:textSize="20dp"
                     android:textStyle="bold" />
                 <TextView
@@ -57,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
+                    android:textColor="@color/black"
                     android:textStyle="bold"
                     android:text="0.00"/>
                 <TextView
@@ -80,6 +82,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/white_squre"
+            android:backgroundTint="@color/salesBlue"
+            android:textColor="@color/white"
             android:text="START NEW SALE">
 
         </Button>
