--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -4,6 +4,9 @@
         android:id="@+id/nav_home"
         android:title="Home" />
     <item
+        android:id="@+id/nav_products"
+        android:title="Products" />
+    <item
         android:id="@+id/nav_account"
         android:title="My Account" />
 
