--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SalesApp" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.SalesApp" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">#0B0F57</item>
         <item name="color">@color/white</item>
 
