--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:src="@drawable/baseline_arrow_back_24"
-        android:background="@null"
+        android:background="@drawable/ripple_effect"
         android:visibility="gone"/>
     <ImageButton
         android:id="@+id/cartBackArrow"
@@ -20,7 +20,7 @@
         android:layout_marginEnd="16dp"
         android:padding="10dp"
         android:src="@drawable/baseline_arrow_back_24"
-        android:background="@null"
+        android:background="@drawable/ripple_effect"
         android:visibility="gone"/>
     <LinearLayout
         android:id="@+id/viewCartBtn"
@@ -36,6 +36,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_marginEnd="6dp"
+            android:background="@drawable/ripple_effect"
             android:text="View Cart"
             android:textSize="18dp"/>
         <LinearLayout
@@ -49,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
+                android:background="@drawable/ripple_effect"
                 android:textStyle="bold"
                 android:textSize="16dp"
                 android:textAlignment="center"
@@ -66,7 +68,7 @@
         android:src="@drawable/baseline_person_add_alt_24"
         android:layout_gravity="end"
         android:layout_marginRight="10dp"
-        android:background="@null"
+        android:background="@drawable/ripple_effect"
         android:visibility="gone"/>
 
     <ImageButton
