--- a/app/src/main/res/layout/product_dialogbox.xml
+++ b/app/src/main/res/layout/product_dialogbox.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/productImage"
+                android:id="@+id/userImage"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:src="@drawable/baseline_photo_size_select_actual_24"
