--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
+        android:padding="10dp"
         android:src="@drawable/baseline_arrow_back_24"
         android:background="@drawable/ripple_effect"
         android:visibility="gone"/>
