--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,92 +7,138 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.ProductsFragment">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="60dp"
-        android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/productImage"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/baseline_photo_size_select_actual_24"
-                app:civ_border_width="2dp"
-                app:civ_border_color="#FF000000"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="20dp"
-        android:paddingTop="50dp"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/editText_productName"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:hint="Product Name"
-            android:inputType="textCapSentences"
-            android:textColor="@color/black" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="60dp"
+                android:orientation="vertical">
+                <de.hdodenhof.circleimageview.CircleImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/productImage"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/baseline_photo_size_select_actual_24"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="#FF000000"/>
 
-        <EditText
-            android:id="@+id/editText_stock"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:layout_marginBottom="30dp"
-            android:inputType="number"
-            android:hint="Stock"/>
-        <EditText
-            android:id="@+id/editText_cost"
-            android:layout_width="match_parent"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:layout_marginBottom="30dp"
-            android:hint="Cost"/>
-        <EditText
-            android:id="@+id/editText_sellingPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:inputType="numberDecimal"
-            android:layout_marginBottom="30dp"
-            android:hint="Selling Price"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/Btn_addProducts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/white_round_squre"
-            android:drawableTintMode="add"
-            android:layout_marginEnd="20dp"
-            android:paddingHorizontal="15dp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text="Add Product"/>
-        <Button
-            android:id="@+id/Btn_clear"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/white_round_squre"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:text="Clear"/>
-    </LinearLayout>
-</LinearLayout>
 
-</ScrollView>
+            </LinearLayout>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingHorizontal="20dp"
+                        android:paddingTop="50dp"
+                        android:orientation="vertical">
+
+                        <EditText
+                            android:id="@+id/editText_productName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="30dp"
+                            android:hint="Product Name"
+                            android:inputType="textCapSentences"
+                            android:textColor="@color/black" />
+
+                        <EditText
+                            android:id="@+id/editText_stock"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:layout_marginBottom="30dp"
+                            android:inputType="number"
+                            android:hint="Stock"/>
+                        <EditText
+                            android:id="@+id/editText_cost"
+                            android:layout_width="match_parent"
+                            android:textColor="@color/black"
+                            android:layout_height="wrap_content"
+                            android:inputType="numberDecimal"
+                            android:layout_marginBottom="30dp"
+                            android:hint="Cost"/>
+                        <EditText
+                            android:id="@+id/editText_sellingPrice"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:inputType="numberDecimal"
+                            android:layout_marginBottom="30dp"
+                            android:hint="Selling Price"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+                        <Button
+                            android:id="@+id/Btn_addProducts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/white_round_squre"
+                            android:drawableTintMode="add"
+                            android:layout_marginEnd="20dp"
+                            android:paddingHorizontal="15dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:text="Add Product"/>
+                        <Button
+                            android:id="@+id/Btn_clear"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/white_round_squre"
+                            android:textStyle="bold"
+                            android:textColor="@color/white"
+                            android:text="Clear"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
+        <FrameLayout
+            android:id="@+id/capture_camera"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+            <androidx.camera.view.PreviewView
+                android:id="@+id/previewView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+            <ImageButton
+                android:id="@+id/captureBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_camera_24"
+                android:layout_marginBottom="30dp"
+                android:layout_gravity="bottom|center"
+                android:background="@null"/>
+            <ImageButton
+                android:id="@+id/cameraChange"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_flip_camera_ios_24"
+                android:layout_marginBottom="40dp"
+                android:layout_marginEnd="35dp"
+                android:layout_gravity="bottom|end"
+                android:background="@null"/>
+        </FrameLayout>
+    </FrameLayout>
+
+
+</FrameLayout>
