--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -23,6 +23,13 @@
         android:src="@drawable/baseline_arrow_back_24"
         android:background="@drawable/ripple_effect"
         android:visibility="gone"/>
+    <EditText
+        android:id="@+id/action_bar_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        android:textColor="@color/white"
+        android:textStyle="bold"/>
     <LinearLayout
         android:id="@+id/viewCartBtn"
         android:layout_width="wrap_content"
@@ -32,7 +39,7 @@
         android:background="@drawable/ripple_effect"
         >
         <TextView
-            android:id="@+id/action_bar_title"
+            android:id="@+id/action_bar_view_cart_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
@@ -79,6 +86,15 @@
         android:src="@drawable/baseline_person_add_alt_24"
         android:layout_gravity="end"
         android:layout_marginRight="10dp"
+        android:background="@drawable/ripple_effect" />
+    <ImageButton
+        android:id="@+id/action_bar_select_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_date_range_24"
+        android:layout_gravity="end"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
         android:background="@drawable/ripple_effect" />
     <ImageButton
         android:id="@+id/discountBtn"
