--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -23,11 +23,12 @@
         android:src="@drawable/baseline_arrow_back_24"
         android:background="@drawable/ripple_effect"
         android:visibility="gone"/>
-    <EditText
+    <TextView
         android:id="@+id/action_bar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home"
+        android:textSize="20dp"
         android:textColor="@color/white"
         android:textStyle="bold"/>
     <LinearLayout
@@ -46,6 +47,7 @@
             android:layout_marginEnd="6dp"
             android:background="@drawable/ripple_effect"
             android:text="View Cart"
+            android:textStyle="bold"
             android:textSize="18dp"/>
         <LinearLayout
             android:layout_width="46dp"
