--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -14,7 +14,8 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/search_receipt"
-            android:layout_width="300sp"
+            android:layout_width="350sp"
+            android:paddingVertical="4dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:background="@null"
@@ -24,13 +25,6 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/baseline_search_24"
-            android:background="@null"
-            app:tint="@color/salesBlue" />
-        <ImageButton
-            android:id="@+id/date_range"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/baseline_date_range_24"
             android:background="@null"
             app:tint="@color/salesBlue" />
     </LinearLayout>
