--- a/app/src/main/res/layout/layout_receipt.xml
+++ b/app/src/main/res/layout/layout_receipt.xml
@@ -34,10 +34,22 @@
         app:layout_constraintVertical_bias="0.372" />
 
     <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:text="1d"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/time"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.895" />
+
+    <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="32dp"
         android:text="12.00"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
