--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,6 +27,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:background="@drawable/white_border_square"
                 android:text="OPEN ORDERS"
                 android:textColor="@color/salesBlue" />
@@ -37,6 +38,7 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:background="@drawable/white_round_squre"
                 android:text="CHARGE"
                 android:textColor="@color/white" />
