--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".Fragments.ReceiptFragment">
-    <LinearLayout
+
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <EditText
-            android:id="@+id/search_receipt"
-            android:layout_width="350sp"
-            android:paddingVertical="4dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:background="@null"
-            android:textSize="20dp"
-            android:hint="search"/>
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/baseline_search_24"
-            android:background="@null"
-            app:tint="@color/salesBlue" />
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/receiptRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:textSize="23dp"
+        android:textColor="@color/black"
+        android:text="Order ID" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
 </LinearLayout>
