--- a/app/src/main/res/layout/orders_dialogbox.xml
+++ b/app/src/main/res/layout/orders_dialogbox.xml
@@ -45,7 +45,7 @@
 </FrameLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewOrder"
-        android:layout_width="match_parent"
+        android:layout_width="360dp"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
