--- a/app/src/main/res/layout/product_dialogbox.xml
+++ b/app/src/main/res/layout/product_dialogbox.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="wrap_content"
